# test

./: .clang-format  .gitignore  CMakeLists.txt  make.sh
test1/: CMakeLists.txt  main.cpp  sol.hpp
test1/lua-5.4.4/: lua.c
test2/: CMakeLists.txt  example.cpp1  fm.h  luaaa.hpp  main.cpp
test2/data/: main.lua
test2/db/: example.lua
test3/: CMakeLists.txt  fm.h  main.cpp
test3/LuaBridge/: LuaBridge.h
test3/data/: test.lua
test4/: CMakeLists.txt
test4/as-exp/: gamemgr.cpp  gamemgr.h  gameobj.cpp  gameobj.h  main.cpp  scriptmgr.cpp  scriptmgr.h
test5/: CMakeLists.txt
test5/as-exp/: Generated_Templates.h  RegistrationMacros.h  gameobj.h  main.cpp  scriptmgr.cpp  scriptmgr.h
test6/: CMakeLists.txt
test7/as-exp/: CScriptMgr.cpp  CScriptMgr.h  bind.h  main.cpp  test.h
test7/data/: script.as
testAS/: CMakeLists.txt
testAS/AngelScript/add_on/autowrapper/: aswrappedcall.h
testAS/as-exp/: CScriptMgr.cpp  CScriptMgr.h  bind.h  main.cpp  test.cpp
testAS/data/: script.as
